--- a/illustro/System/System.ini
+++ b/illustro/System/System.ini
@@ -296,7 +296,7 @@ X=200
 Y=0r
 W=190
 H=14
-Text=%1%
+Text=%1% of 32GB
 Percentual=1
 ; Percentual=1 needs to be added her because measureRAM returns the amount
 ; of RAM used in bytes. Using Percentual=1 will convert that into a percentual value.
